@@ -1,5 +1,10 @@
 2008-12-21  Ryan Lortie  <desrt@desrt.ca>
 
+	* src/trashapplet.c (trash_applet_monitor_changed): remove temporary
+	compatibility code
+
+2008-12-21  Ryan Lortie  <desrt@desrt.ca>
+
 	Bug 419501 – Empty wastebasket generates WM_TRANSIENT_FOR window
 	manager warning
 
